<resources>
    <string name="app_name">pixiv</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>



    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Drawer-->
    <string name="drawer_user_manage_work">Manage Works</string>
    <string name="drawer_user_collection">Collection</string>
    <string name="drawer_user_following">Following</string>
    <string name="drawer_user_follower">Followers</string>

    <string name="behavior_bottom_area">com.eps3rd.app.ui.BottomAreaBehavior</string>
    <string name="behavior_bottom_button">com.eps3rd.app.ui.BottomButtonBehavior</string>
    <string name="drawer_collapse_behavior">com.eps3rd.app.ui.DrawerCollapseBehavior</string>

<!--    Drawer Items-->
    <string name="drawer_item_debug">Debug</string>
    <string name="drawer_item_user">User</string>
    <string name="drawer_item_control">Layout Control</string>
    <string name="drawer_item_control_disable_bottom">Disable bottom button</string>
    <string name="drawer_item_control_disable_top">Disable top tab</string>
    <string name="drawer_item_control_drag">Drag to sort</string>
    <string name="drawer_item_cache">Clear Cache</string>
    <string name="search_hint">test search hint</string>
    <string name="query_hint">query_hint</string>
    <string name="clear_suggestion">Clear history</string>
</resources>