<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/drawer_item_padding">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_foreground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/drawer_item_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/manage_work"
            android:layout_width="@dimen/drawer_expand_icon_size"
            android:layout_height="@dimen/drawer_expand_icon_size"
            android:src="@drawable/ic_round_image_24"
            app:tint="@color/black_overlay" />

        <TextView
            android:id="@+id/tv_manage_work"
            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawer_item_margin"
            android:text="@string/drawer_user_manage_work" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_foreground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/drawer_item_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <ImageView
            android:id="@+id/collection"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/drawer_expand_icon_size"
            android:layout_height="@dimen/drawer_expand_icon_size"
            android:src="@drawable/ic_round_favorite_border_24"
            app:tint="@color/black_overlay" />

        <TextView
            android:id="@+id/tv_collection"
            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawer_item_margin"
            android:text="@string/drawer_user_collection" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_foreground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/drawer_item_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <ImageView
            android:layout_width="@dimen/drawer_expand_icon_size"
            android:layout_height="@dimen/drawer_expand_icon_size"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_following"
            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawer_item_margin"
            android:text="@string/drawer_user_following" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_foreground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/drawer_item_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3">

        <ImageView
            android:layout_width="@dimen/drawer_expand_icon_size"
            android:layout_height="@dimen/drawer_expand_icon_size"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_follower"
            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawer_item_margin"
            android:text="@string/drawer_user_follower" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>